@@ -51,6 +51,8 @@ dpkg (1.18.0) UNRELEASED; urgency=low
     reproducible regardless of the build system filesystem, and document
     how the value is computed and that it is just an approximation.
     Closes: #650077
+  * Fix support for cross-building dpkg:
+    - Assume a working C99 snprintf on SUS >= v3.
 
  -- Guillem Jover <guillem@debian.org>  Tue, 09 Dec 2014 23:53:18 +0100
 
